2011-11-04  Ingo Feinerer  <feinerer@logic.at>

	* man/matrix.Rd: Document as.TermDocumentMatrix.term_frequency.

	* man/combine.Rd: Document c.term_frequency.

2011-10-11  Ingo Feinerer  <feinerer@logic.at>

	* R/meta.R (`meta<-.Corpus`): Assume that the replacement value
	can be accessed via '[' and not '[['.

2011-08-24  Ingo Feinerer  <feinerer@logic.at>

	* R/stopwords.R (stopwords): Raise an error if no stopwords are
	available for requested language. Suggested by Derek M Jones.

2011-05-27  Ingo Feinerer  <feinerer@logic.at>

	* R/weight.R (weightSMART): Implement Cosine and pivoted unique
	normalization.

2011-02-17  Ingo Feinerer  <feinerer@logic.at>

	* R/transform.R (stemDocument.PlainTextDocument): Use language
	argument.

2011-02-04  Ingo Feinerer  <feinerer@logic.at>

	* R/source.R: Store strings and connections instead of unevaluated
	calls.

2010-11-26  Ingo Feinerer  <feinerer@logic.at>

	* R/corpus.R (Corpus): Allow init and exit hooks for readers.

2010-10-22  Ingo Feinerer  <feinerer@logic.at>

	* R/matrix.R (.TermDocumentMatrix): Make Weighting an attribute
	(instead of a list element).

2010-10-16  Ingo Feinerer  <feinerer@logic.at>

	* R/corpus.R (`[[.VCorpus`, `[[.PCorpus'): Access individual
	documents by names (fallback to IDs if names are not set).

2010-08-25  Ingo Feinerer  <feinerer@logic.at>

	* R/corpus.R (c.Corpus): When concatenating corpora, the argument
	\code{recursive} now determines whether existing corpus meta data
	is used.

2010-08-06  Ingo Feinerer  <feinerer@logic.at>

	* R/transform.R: Removed convert_UTF_8(). Use enc2utf8() instead.

2010-06-17  Ingo Feinerer  <feinerer@logic.at>

	* R/matrix.R (TermDocumentMatrix): If a dictionary is given do not
	remove terms not occurring in the corpus anymore.

2010-06-02  Ingo Feinerer  <feinerer@logic.at>

	* R/plot.R (Zipf_plot, Heaps_plot): Plotting functions for Zipf's
	and Heaps' law.

2010-05-18  Ingo Feinerer  <feinerer@logic.at>
