@@ -31,11 +31,13 @@ export("as.PlainTextDocument",
        "getFilters",
        "getReaders",
        "getSources",
+       "getTokenizers",
        "getTransformations",
        "ID",
        "inspect",
        "Language",
        "LocalMetaData",
+       "MC_tokenizer",
        "makeChunks",
        "materialize",
        "meta",
@@ -68,6 +70,7 @@ export("as.PlainTextDocument",
        "preprocessReut21578XML",
        "RCV1Document",
        "Reuters21578Document",
+       "scan_tokenizer",
        "searchFullText",
        "stemCompletion",
        "stemDocument",
